[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }  # Enable the "derive" feature
serde_json = "1.0"  # if you want to use JSON

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html